# sinhala_call_analyzer

./: .gitignore  README.md  ROADMAP.md  alembic.ini  pyproject.toml  run_pipeline_hidden.vbs  setup_pipeline_task.ps1
alembic/: env.py
alembic/versions/: 19e9d5669e6d_initial_schema.py
config/: config.yaml
data/processed/: combined.json
data/transcripts/processed/: 20260101-084910_0773169775-all_gemini-2.5-flash_transcript_1780200208.txt  20260101-123734_0763926319-all_gemini-2.5-pro_transcript.txt  20260101-123734_0763926319-all_gemini-3-flash-preview_transcript.txt  20260101-130625_0773062835-all_gemini-2.5-flash_transcript.txt  20260101-130625_0773062835-all_gemini-2.5-pro_transcript.txt  20260101-130625_0773062835-all_gemini-3-flash-preview_transcript.txt  20260101-131558_332255215-all_gemini-2.5-flash_transcript.txt  20260101-192328_706279448-all_gemini-2.5-flash_transcript (2).txt  20260101-192328_706279448-all_gemini-2.5-pro_transcript (1).txt  20260101-192328_706279448-all_gemini-3-flash-preview_transcript (2).txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: IngestCallForm.tsx  KpiCards.tsx  RecentCalls.tsx  SentimentDonut.tsx  SentimentTrend.tsx  TopCategories.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: CallDetailPage.tsx  CallLogPage.tsx  CategoriesPage.tsx  OverviewPage.tsx  SentimentPage.tsx
frontend/src/types/: index.ts
src/: 01_datacombine.py  03_trainer.py  04_evaluator.py  inference.py  preprocessor.py
src/api/: app.py
src/database/: __init__.py  models.py  repository.py  schemas.py  seed.py
src/pipeline/: main.py  processor.py
src/utils/: hash_utils.py
tests/: test_robustness.py
